merge typecheck and syntax clean